[package]
name = "zkv"
version = "0.1.0"
authors = ["Alexander Karlis <alexanderkarlis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"

[[bin]]
path = "src/bin/main.rs"
name = "zkv"
test = false

